renamed all the logitech names to just gamepad

--- a/logitech/c/Makefile
+++ b/logitech/c/Makefile
@@ -1,13 +1,22 @@
-etest: main.o logitech.o 
-	g++ -o etest main.o logitech.o 
+# make file edited 
+
+#etest: main.o logitech.o 
+#	g++ -o etest main.o logitech.o 
+etest: main.o gamepad.o
+	g++ -o etest main.o gamepad.o
 
 
-main.o: main.c logitech.h
+#main.o: main.c logitech.h
+#	gcc -Wall -Wextra -c main.c
+
+main.o: main.c gamepad.h
 	gcc -Wall -Wextra -c main.c
 
-logitech.o: logitech.c logitech.h
-	gcc -Wall -Wextra -c logitech.c
+#logitech.o: logitech.c logitech.h
+#	gcc -Wall -Wextra -c logitech.c
 
+gamepad.o: gamepad.c gamepad.h
+	gcc -Wall -Wextra -c gamepad.c
 
 clean:
 	rm -f etest
