added functions for tcp client.  Nothing called in main yet

--- a/logitech/c/Makefile
+++ b/logitech/c/Makefile
@@ -1,7 +1,7 @@
-# make file edited 
+# make file edited
 
-#etest: main.o logitech.o 
-#	g++ -o etest main.o logitech.o 
+#etest: main.o logitech.o
+#	g++ -o etest main.o logitech.o
 etest: main.o gamepad.o
 	g++ -o etest main.o gamepad.o
 
@@ -19,6 +19,7 @@ gamepad.o: gamepad.c gamepad.h
 	gcc -Wall -Wextra -c gamepad.c
 
 # NOTE: for some reason this isn't loading
+# UPDATE: I think it's working now
 # build rules for the tcp_client
 tcp_client.o: tcp_client.h tcp_client.c
 	gcc -Wall -Wextra -c tcp_client.c
@@ -27,4 +28,5 @@ clean:
 	rm -f etest
 	rm -f *.o
 
-
+run:
+	./etest
